--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-langchain==0.1.0
-langchain-openai==0.0.2
+langchain==0.2.2
+langchain-core==0.2.43
+langchain-ollama==0.1.0
+langchain-openai==0.1.10
+langsmith==0.1.147
 requests==2.31.0
 python-dotenv==1.0.0
 pydantic==2.5.0
