--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,8 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 langchain==0.1.0
-langchain-openai==0.0.2
 langchain-community==0.0.10
+langchain-ollama==0.1.0
 requests==2.31.0
 python-dotenv==1.0.0
 pydantic==2.5.0
-redis==5.0.1
-pytest==7.4.3
-pytest-cov==4.1.0
-colorama==0.4.6
